<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OurMusic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_ourmusic">Hello OurMusic!</string>
	<string name="record">Record</string>
    <string name="stop">Stop</string>
	<string name="play">Play</string>
	<string name="pause">Pause</string>
    
</resources>
